--- a/Cemetery/appsettings.json
+++ b/Cemetery/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CemeteryDb; Trusted_Connection=True;  MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=CemeteryDbNew; Trusted_Connection=True;  MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
